--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <li><a href="drive-mad/dist/index.html" class="menu">Drive</a></li>
             <li><a href="game-card/index.html" class="menu">Card</a></li>
             <li><a href="fire/fireworks-launcher.html" class="menu">Fire</a></li>
-            <li><a href="#" class="menu">Laptop</a></li>
+            <li><a href="life/life.html" class="menu">Life</a></li>
             <li><a href="#" class="menu">Help</a></li>
             </ul>
         </nav>
@@ -373,5 +373,6 @@
     animate();
     </script>
 </body>
+
 
 </html>
