--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <li><a href="game-card/index.html" class="menu">Card</a></li>
             <li><a href="fire/fireworks-launcher.html" class="menu">Fire</a></li>
             <li><a href="life/life.html" class="menu">Life</a></li>
-            <li><a href="#" class="menu">Help</a></li>
+            <li><a href="treker/treker.html" class="menu">Habit Tracker</a></li>
             </ul>
         </nav>
     </div>
@@ -376,3 +376,4 @@
 
 
 </html>
+
